-m更改个人简介

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -138,6 +138,8 @@ social:
   团队GitHub: https://github.com/DropsDevopsOrg || github
   团队主页: http://www.dropsec.xyz/ ||dropsec
   安全公众号: https://github.com/DropsOfZut/awesome-security-weixin-official-accounts || xx
+  开发记录: https://bjj.dropsec.xyz/2019/10/06/ddaylog/ || xx
+  日记: https://bjj.dropsec.xyz/2019/09/23/fix%E7%94%9F%E6%B4%BB/|| xx
   #E-Mail: mailto:yourname@gmail.com || envelope
   #Google: https://plus.google.com/yourname || google
   #Twitter: https://twitter.com/yourname || twitter
