--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -163,7 +163,8 @@ links_layout: inline
 links:
   nMask : https://thief.one
   洞见安全: http://www.doonsec.com/
-  瓦都剋: http://byd.dropsec.xyz/
+  瓦都剋: https://byd.dropsec.xyz/
+  Joynice: https://lr.dropsec.xyz/
 
   爬虫项目: https://github.com/DropsDevopsOrg/ECommerceCrawlers
 
